Fix horizontal scroll issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -32,11 +32,15 @@
   }
 }
 
+html, body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Young', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: clip;
   margin: 0;
   padding: 0;
 }
